<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/popup_window_button"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_name"/>

            <TextView
                android:id="@+id/buildingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"/>

            <TextView
                android:id="@+id/buildingSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"/>

            <TextView
                android:id="@+id/buildingMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"/>

            <TextView
                android:id="@+id/buildingTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"/>

            <TextView
                android:id="@+id/buildingWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"/>

            <TextView
                android:id="@+id/buildingThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"/>

            <TextView
                android:id="@+id/buildingFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"/>

            <TextView
                android:id="@+id/buildingSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/popup_window_interior_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interior_map"
        android:layout_below="@id/tableLayout"/>

    <Button
        android:id="@+id/popup_window_visual_aid_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visual_aid"
        android:layout_below="@+id/tableLayout"
        android:layout_toEndOf="@+id/popup_window_interior_button"/>

    <Button
        android:id="@+id/popup_window_exterior_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exterior_map"
        android:layout_below="@+id/tableLayout"
        android:layout_toEndOf="@id/popup_window_visual_aid_button"/>
</RelativeLayout>