<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HenryHicksInfoActivity">

    <TextView
        android:id="@+id/Services"
        android:layout_width="383dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/building"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_name" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/kil_floor_plan_button"
        android:text="@string/interior_map"
        android:layout_below="@+id/Services"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/kil_visual_aid_button"
        android:text="@string/visual_aid"
        android:layout_toEndOf="@+id/kil_floor_plan_button"
        android:layout_below="@+id/Services"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/kil_exterior_map_button"
        android:text="@string/exterior_map"
        android:layout_toEndOf="@+id/kil_visual_aid_button"
        android:layout_below="@+id/Services"/>

</RelativeLayout>