<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/menu_log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:background="@color/colorPrimary"
        android:textColor="@color/brightGrey"/>

    <Button
        android:id="@+id/select1"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/menu1"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/select2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/select2"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/menu2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/select3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select1" />

    <Button
        android:id="@+id/select3"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/menu3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/select4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select2" />

    <Button
        android:id="@+id/select4"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/menu4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select3" />

</android.support.constraint.ConstraintLayout>